tests/fixtures/nupm/rejected/malformed-closure/bad-closure/mod.nu
export def main [] { "never reached if metadata rejected" }
